MTA  : application du bootmetro sur le formulaire créer proposition        affichage OK        insertion dans la base de donnée OK        Redirection vers l'affichage des proposition (KO)

--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -39,7 +39,7 @@
                         
                         <li><a href="#">Proposition</a>
 						<ul  class="sousMenu">
-							<li><a href="<?php echo $this->url(array('controller' => 'proposition', 'action' => 'create'), 'default', true) ?>" >Créer</a></li>
+							<li><a href="<?php echo $this->url(array('controller' => 'proposition', 'action' => 'createproposition'), 'default', true) ?>" >Créer</a></li>
 							<li><a href="<?php echo $this->url(array('controller' => 'proposition', 'action' => 'affichercsm'), 'default', true) ?>">Afficher / Modifier</a></li>
 							<li><a href="<?php echo $this->url(array('controller' => 'proposition', 'action' => 'afficheradmin'), 'default', true) ?>">Valider / Refuser</a></li>
 						</ul>
