--- a/application/views/scripts/test/calcul-jours-conges.phtml
+++ b/application/views/scripts/test/calcul-jours-conges.phtml
@@ -6,7 +6,7 @@
 	
 	$logger->log('Calculer le nombre de jours entre deux dates : '.$this->var, Zend_Log::INFO);
 	 
-	//echo $this->var;
+	echo $this->var;
 
 
 ?>
