--- a/application/views/scripts/test/index.phtml
+++ b/application/views/scripts/test/index.phtml
@@ -2,61 +2,55 @@
 <?php 
 
 
-
-///////////Function recupére les jours fériés maroc///////////
-/*  echo 'les jours fériés Maroc </br>';
+//OK  
+///////////Function jours_feries($annee, $alsacemoselle, $maroc)
+/*    
+    echo 'les jours fériés</br>';
 	for ($i = 0; $i <  count($this->var); $i++) 
 	{
-		echo $this->var[$i]['date_debut'].'</br>' ;
+		echo $this->var[$i].'</br>' ;
 	}
 */
 
 
-
-///////////Function jours_feries($annee, $alsacemoselle=false, $maroc=false)///////////
-/*   echo 'les jours fériés Maroc / France selon le cas ! </br>';
-   
-   for ($i = 0; $i <  count($this->var); $i++) 
-	{
-   		// multidimentionnel		
-  		 if ((count($this->var,COUNT_RECURSIVE) - count($this->var,COUNT_NORMAL) > 0 ))    
-   		{
-  			 	echo $this->var[$i]['date_debut'].'</br>' ;  
-   		}
-   		// multidimentionnel
-  		 else                
- 	    {
-  			   echo $this->var[$i].'</br>' ;
-  	    }
-	
-	}
-*/
-
+//OK
 ///////////Function est_ferie($jour, $alsacemoselle, $maroc)
-/*     echo 'tester si un jour est férié ou non ! </br>';
-    echo " le jour est il férié ?  :".$this->var;  */ 
+//    echo 'tester si un jour est férié ou non ! </br>';
+//     var_dump($this->var) ;
+  
+         
 
 
 ///////////Function calcul_nombre_jours_conges///////////
-/*e
+/*
 echo 'Calculer le nombre de jours entre deux dates ! </br>'; 
 echo $this->var;
 */
 
-
+//OK
 ///////////Function a_normaliser($date,$maroc)
-/*
-    echo " le jour à normaliser :".$this->var;   
-*/
 
+//    echo " le jour à normaliser :".$this->var;   
+
+
+//OK
 ///////////Function  normaliser_date_debut_conge($date,$maroc)
-//    print_r($this->var);   
+//     print_r($this->var);   
 
     
-    
+//OK  
 ///////////Function  normaliser_date_fin_conge($date,$maroc)
 //	  print_r($this->var);   
     
+
+ //OK  
+///////////Function normaliser_flag_midi($date,$midi,$maroc)
+/*    echo " normaliser flag midi";
+	if($this->var)
+		echo "<br>normaliser" ;
+	else 
+		echo "<br>ne pas normaliser" ;
+*/
 
 ?>
 
