--- a/application/views/scripts/proposition/index.phtml
+++ b/application/views/scripts/proposition/index.phtml
@@ -1,8 +1,59 @@
-	
 
-<div>
-    <table border="1" id="ma_table">
-        <tr>
+
+<div class="row-fluid offset1">
+		<div id="header-container">
+            
+			<div class="dropdown">
+                  <a class="header-dropdown dropdown-toggle accent-color" data-toggle="dropdown" href="#" >
+                     Proposition
+                     <b class="caret"></b>
+                  </a>
+                  
+                 	 
+                   <ul class="dropdown-menu">
+                       <li><a href="<?php echo $this->url(array('controller' => 'proposition', 'action' => 'createproposition'), 'default', true) ?>">CrÃ©er</a></li>
+                       <li><a href="<?php echo $this->url(array('controller' => 'proposition', 'action' => 'affichercsm'), 'default', true) ?>">Afficher / Modifier</a></li>
+                       <li><a href="<?php echo $this->url(array('controller' => 'proposition', 'action' => 'afficheradmin'), 'default', true) ?>">Valider / Refuser</a></li>                         
+                   </ul>
+              
+			</div><!--MBA : fermeture dropdown -->
+          
+		</div><!-- MBA : fermeture div="header-container" -->
+	</div><!-- MBA : fermeture div="row-fluid -->
+         <br/>
+
+<div class="container">
+		<div class="well row-fluid">
+		<h2>Liste des Propositions :</h2><br/>
+	<?php 	if(isset($this->error)){ 
+	?>
+	
+      <!-- afficage alerte avec message d'erreur -->
+			<div class="alert">
+				<button type="button" class="close " data-dismiss="alert"></button>
+				<strong>Alerte!</strong>  <?php //Message d'erreur
+                                         echo "Erreur :".$this->error; ?>
+			</div>
+
+	<?php }
+    /*
+	 * Si erreurs de traitements* renvoyÃ© depuis le controlleur 
+	 * traitemets : logique, ajout BD, Exception ...
+	 */
+	
+	else if(isset($this->success)){
+	?>
+	
+	<!-- afficage message succÃ©s  -->
+            <div class="alert alert-info">
+				<button type="button" class="close " data-dismiss="alert"></button>
+				<strong>Succes!</strong> <?php //Message succes
+	                                      echo $this->success; ?>
+			</div>
+	<?php }?>
+    <table class="table table-hover ">
+       <thead> 
+       <tr>
             
             <th>Nom Prenom</th>
             <th>Date Debut</th>
@@ -14,18 +65,19 @@
             <th>Edit</th>
             <th>Delete</th>
 
-            
-
         </tr>
-        <?php
-            //$this->usersArray est une variable qui peut être garnie par le controller
+        </thead>
+         <?php
+            //$this->usersArray est une variable qui peut ï¿½tre garnie par le controller
             //elle doit recevoir un tableau contenant des objets de type Default_Model_Proposition
-            //le tableau est parcouru par foreach pour afficher les propiétés des objets contenus dans le tableau
+            //le tableau est parcouru par foreach pour afficher les propiï¿½tï¿½s des objets contenus dans le tableau
             foreach ($this->propositionArray as $proposition) :
             $personne = new Default_Model_Personne();
 			$result_set_personnes = $personne->find($proposition->id_personne);
         ?>
-        <tr>
+       <tbody>
+       
+         <tr>
             
             <td><?php echo $result_set_personnes->getNom().'  '.$result_set_personnes->getPrenom(); ?></td>
             <td><?php echo $proposition->date_debut; ?></td>
@@ -42,16 +94,16 @@
             </td>
 
         </tr>
-        <?php endforeach; ?>
+        <?php endforeach; ?></tbody>
     </table>
     <?php
-    //nous affichons, à la suite du tableau (après la balise </table>), notre template qui permettra de gérer la pagination
-    //la méthode pginationControl() prend, ici, 3 arguments:
+  //nous affichons, ï¿½ la suite du tableau (aprï¿½s la balise </table>), notre template qui permettra de gï¿½rer la pagination
+    //la mï¿½thode pginationControl() prend, ici, 3 arguments:
     //  - l'instane paginator
-    //  - le style de défilement
+    //  - le style de dï¿½filement
     //  - le template de pagination
     echo $this->paginationControl($this->propositionArray, 'Sliding', 'common/my_paginator_control.phtml');
 	?>
-	
-
+	</div>
 </div>
+
