MTA  :  Bootmetro sur Proposition         modifications apportées sur le routages         RAF : action edit charge les données au niveau du formulaire               proposition et quelques améliorations secondaire

--- a/application/views/scripts/proposition/affichercsm.phtml
+++ b/application/views/scripts/proposition/affichercsm.phtml
@@ -93,10 +93,10 @@
             <td><?php echo $proposition->etat; ?></td>
             <td>
 
-                <a href="<?php if ($proposition->etat ==  "NC") { echo $this->url(array('controller' => 'proposition', 'action' => 'edit', 'id' => $proposition->id), 'default', true);} ?>">Edit</a>
+                 <a href="<?php echo $this->url(array('controller' => 'proposition', 'action' => 'edit', 'id' => $proposition->id), 'default', true); ?>">Edit</a>
             </td>
            <td>
-                <a href="<?php if ($proposition->etat =="NC"){ echo $this->url(array('controller' => 'proposition', 'action' => 'delete', 'id' => $proposition->id), 'default', true);} ?>">Delete</a>
+               <a href="<?php echo $this->url(array('controller' => 'proposition', 'action' => 'delete', 'id' => $proposition->id), 'default', true); ?>">Delete</a>
             </td>
 
         </tr>
