--- a/application/views/scripts/proposition/edit.phtml
+++ b/application/views/scripts/proposition/edit.phtml
@@ -3,7 +3,7 @@
 	
 <div id="content">
 	<div id ="bloc_choix_proposition">
-		<h4> <?php echo $this->escape($this->title); ?>  </h4>
+		<h4> <?php echo $this->escape($this->title);?>  </h4>
 				<div id="filtres_proposition">
 					<ol>
 						</br>
@@ -18,9 +18,13 @@
 						<li><strong>Debut Midi</strong></li>
 					</ol>			
 				</div>
-
+              
 	
-	<?php echo $this->form; ?>	
+	<?php 
+	
+	var_dump($this->var); 
+	echo $this->form;
+	       ?>	
 	</div>
 
 
