--- a/application/layouts/scripts/mylayout.phtml
+++ b/application/layouts/scripts/mylayout.phtml
@@ -98,7 +98,7 @@ echo $this->doctype() ?>
                        <span class="icon-bar"></span>
                        <span class="icon-bar"></span>
                      </a>
-                     <a class="brand" style="margin-top: 0px;padding-top: 0px;" href="#"><img width="60"  height="70" botom="0" src="<?php echo $this->baseUrl();?>./content/img/cgi.png" /></a>
+                     <a class="brand" style="margin-top: 0px;padding-top: 0px;" ><img width="60"  height="70" botom="0" src="<?php echo $this->baseUrl();?>./content/img/cgi.png" /></a>
                      <div class="nav-collapse collapse navbar-responsive-collapse">
                        
                        
@@ -118,9 +118,7 @@ echo $this->doctype() ?>
                           <li class="dropdown">
                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Congés<b class="caret"></b></a>
                            <ul class="dropdown-menu">
-                             <li><a href="<?php echo $this->url(array('controller' => 'conge', 'action' => 'create'), 'default', true) ?>">Créer</a></li>
-                             <li><a href="<?php echo $this->url(array('controller' => 'conge', 'action' => 'rederigerversindex'), 'default', true) ?>">Valider / Refuser</a></li>
-                             
+                             <li><a href="<?php echo $this->url(array('controller' => 'conge', 'action' => 'createconge'), 'default', true) ?>">Créer</a></li>
                            </ul>
                          </li>
                          <li class="divider-vertical"></li>
