MTA :  Conge bootmetro mis en place        + Creer congé  OK        + Suppression de Modifier/Supprimer du menu congé OK

--- a/application/views/scripts/conge/create-conge.phtml
+++ b/application/views/scripts/conge/create-conge.phtml
@@ -16,12 +16,9 @@
             
 			<div class="dropdown">
                   <a class="header-dropdown dropdown-toggle accent-color" data-toggle="dropdown" href="#" >
-                     Conge
-                    
+                  Conge
                   </a>
-                  
-             
-              
+
 			</div><!--MBA : fermeture dropdown -->
           
 		</div><!-- MBA : fermeture div="header-container" -->
@@ -76,7 +73,7 @@
             <div class="alert alert-info">
 				<button type="button" class="close " data-dismiss="alert"></button>
 				<strong>Succes!</strong> <?php //Message succes
-	                                      echo $this->success . "' a Ã©tÃ© bien crÃ©Ã© <a href='".$this->url(array('controller' => 'proposition', 'action' => 'index'), 'default', true)."'>Afficher la table propositions </a>"; ?>
+	                                      echo $this->success . "' a été bien créer <a href='".$this->url(array('controller' => 'proposition', 'action' => 'createconge'), 'default', true)."'>Afficher la table des conges </a>"; ?>
 			</div>
 	<?php }?>
 	
