MTA : Modifier un congé OK !

--- a/application/layouts/scripts/mylayout.phtml
+++ b/application/layouts/scripts/mylayout.phtml
@@ -108,7 +108,7 @@ echo $this->doctype() ?>
                        	 <li class="dropdown">
                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Proposition<b class="caret"></b></a>
                            <ul class="dropdown-menu">
-                             <li><a href="<?php echo $this->url(array('controller' => 'proposition', 'action' => 'createproposition'), 'default', true) ?>">Créer</a></li>
+                             <li><a href="<?php echo $this->url(array('controller' => 'proposition', 'action' => 'creer'), 'default', true) ?>">Créer</a></li>
                              <li><a href="<?php echo $this->url(array('controller' => 'proposition', 'action' => 'affichercsm'), 'default', true) ?>">Afficher / Modifier</a></li>
                              <li><a href="<?php echo $this->url(array('controller' => 'proposition', 'action' => 'afficheradmin'), 'default', true) ?>">Valider / Refuser</a></li>
                             
@@ -118,7 +118,7 @@ echo $this->doctype() ?>
                           <li class="dropdown">
                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Congés<b class="caret"></b></a>
                            <ul class="dropdown-menu">
-                             <li><a href="<?php echo $this->url(array('controller' => 'conge', 'action' => 'createconge'), 'default', true) ?>">Créer</a></li>
+                             <li><a href="<?php echo $this->url(array('controller' => 'conge', 'action' => 'creer'), 'default', true) ?>">Créer</a></li>
                            </ul>
                          </li>
                          <li class="divider-vertical"></li>
