--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -33,7 +33,7 @@
 
                         <li><a href="#">Proposition</a>
 						<ul  class="sousMenu">
-							<li><a href="<?php echo $this->url(array('controller' => 'proposition', 'action' => 'createproposition'), 'default', true) ?>" >Créer</a></li>
+							<li><a href="<?php echo $this->url(array('controller' => 'proposition', 'action' => 'creer'), 'default', true) ?>" >Créer</a></li>
 							<li><a href="<?php echo $this->url(array('controller' => 'proposition', 'action' => 'affichercsm'), 'default', true) ?>">Afficher / Modifier</a></li>
 							<li><a href="<?php echo $this->url(array('controller' => 'proposition', 'action' => 'afficheradmin'), 'default', true) ?>">Valider / Refuser</a></li>
 						</ul>
@@ -41,7 +41,7 @@
                         
 						<li><a href="#">Conge</a>
 						<ul  class="sousMenu">
-							<li><a href="<?php echo $this->url(array('controller' => 'conge', 'action' => 'create'), 'default', true) ?>">Créer</a></li>
+							<li><a href="<?php echo $this->url(array('controller' => 'conge', 'action' => 'creer'), 'default', true) ?>">Créer</a></li>
 							<li><a href="<?php echo $this->url(array('controller' => 'conge', 'action' => 'rederigerversindex'), 'default', true) ?>">Valider / Refuser</a></li>
 						</ul>
 						</li>
