--- a/application/views/scripts/conge/creer.phtml
+++ b/application/views/scripts/conge/creer.phtml
@@ -73,7 +73,7 @@
             <div class="alert alert-info">
 				<button type="button" class="close " data-dismiss="alert"></button>
 				<strong>Succes!</strong> <?php //Message succes
-	                                      echo $this->success . "' a été bien créer <a href='".$this->url(array('controller' => 'proposition', 'action' => 'createconge'), 'default', true)."'>Afficher la table des conges </a>"; ?>
+	                                      echo $this->success; ?>
 			</div>
 	<?php }?>
 	
