--- a/application/views/scripts/proposition/afficheradmin.phtml
+++ b/application/views/scripts/proposition/afficheradmin.phtml
@@ -11,7 +11,7 @@
                   
                  	 
                    <ul class="dropdown-menu">
-                       <li><a href="<?php echo $this->url(array('controller' => 'proposition', 'action' => 'createproposition'), 'default', true) ?>">Créer</a></li>
+                       <li><a href="<?php echo $this->url(array('controller' => 'proposition', 'action' => 'creer'), 'default', true) ?>">Créer</a></li>
                        <li><a href="<?php echo $this->url(array('controller' => 'proposition', 'action' => 'affichercsm'), 'default', true) ?>">Afficher / Modifier</a></li>
                        <li><a href="<?php echo $this->url(array('controller' => 'proposition', 'action' => 'afficheradmin'), 'default', true) ?>">Valider / Refuser</a></li>                         
                    </ul>
