--- a/application/views/scripts/proposition/creer.phtml
+++ b/application/views/scripts/proposition/creer.phtml
@@ -22,7 +22,7 @@
                   
                  	 
                    <ul class="dropdown-menu">
-                       <li><a href="<?php echo $this->url(array('controller' => 'proposition', 'action' => 'createproposition'), 'default', true) ?>">Créer</a></li>
+                       <li><a href="<?php echo $this->url(array('controller' => 'proposition', 'action' => 'creer'), 'default', true) ?>">Créer</a></li>
                        <li><a href="<?php echo $this->url(array('controller' => 'proposition', 'action' => 'affichercsm'), 'default', true) ?>">Afficher / Modifier</a></li>
                        <li><a href="<?php echo $this->url(array('controller' => 'proposition', 'action' => 'afficheradmin'), 'default', true) ?>">Valider / Refuser</a></li>                         
                    </ul>
@@ -82,7 +82,7 @@
             <div class="alert alert-info">
 				<button type="button" class="close " data-dismiss="alert"></button>
 				<strong>Succes!</strong> <?php //Message succes
-	                                      echo $this->success . "' a été bien créé <a href='".$this->url(array('controller' => 'proposition', 'action' => 'index'), 'default', true)."'>Afficher la table propositions </a>"; ?>
+	                                      echo $this->success ;?>
 			</div>
 	<?php }?>
 	
