--- a/application/views/scripts/personne/index.phtml
+++ b/application/views/scripts/personne/index.phtml
@@ -129,7 +129,7 @@ echo $this->headScript();
               <a href="<?php echo $this->url(array('controller' => 'personne', 'action' => 'edit', 'id' => $personne->id), 'default', true); ?>"><i  class="icon-pencil"></i></a>
             </td>
            <td>
-                <!-- <a href="<?php echo $this->url(array('controller' => 'personne', 'action' => 'index', 'act' =>'delete','id' => $personne->id, 'page' => $this->page), 'default', true); ?>">Delete</a>  --><i class="icon-remove" id= "<?php echo $this->url(array('controller' => 'personne', 'action' => 'delete',), 'default', true); ?>"></i>
+                <i class="icon-remove" id= "<?php echo $this->url(array('controller' => 'personne', 'action' => 'delete',), 'default', true); ?>"></i>
             </td>
 
         </tr>
