--- a/application/layouts/scripts/mylayout.phtml
+++ b/application/layouts/scripts/mylayout.phtml
@@ -36,29 +36,32 @@ echo $this->doctype() ?>
 		   */
 		 
 		  $this->headLink()->appendStylesheet($this->baseUrl() . '/content/css/bootstrap.css');
-		   $this->headLink()->appendStylesheet($this->baseUrl() . '/content/css/bootstrap-responsive.css');
-		    $this->headLink()->appendStylesheet($this->baseUrl() . '/content/css/bootmetro.css');
-		     $this->headLink()->appendStylesheet($this->baseUrl() . '/content/css/bootmetro-tiles.css');
-		      $this->headLink()->appendStylesheet($this->baseUrl() . '/content/css/bootmetro-charms.css');
-		       $this->headLink()->appendStylesheet($this->baseUrl() . '/content/css/metro-ui-light.css');
-		        $this->headLink()->appendStylesheet($this->baseUrl() . '/content/css/icomoon.css'); 
-		        echo $this->headLink();
+		  $this->headLink()->appendStylesheet($this->baseUrl() . '/content/css/bootstrap-responsive.css');
+		  $this->headLink()->appendStylesheet($this->baseUrl() . '/content/css/bootmetro.css');
+          $this->headLink()->appendStylesheet($this->baseUrl() . '/content/css/bootmetro-tiles.css');
+	      $this->headLink()->appendStylesheet($this->baseUrl() . '/content/css/bootmetro-charms.css');	
+	      $this->headLink()->appendStylesheet($this->baseUrl() . '/content/css/metro-ui-light.css');
+	      $this->headLink()->appendStylesheet($this->baseUrl() . '/content/css/icomoon.css'); 
+          echo $this->headLink();		       
+		        
+		        
+		  $this->headScript()->appendFile( $this->baseUrl() .'/scriptjs/jquery-1.8.2.min.js');
+		  $this->headScript()->appendFile($this->baseUrl().'/scriptjs/google-code-prettify/prettify.js');
+	      $this->headScript()->appendFile($this->baseUrl() .'/scriptjs/jquery.mousewheel.js');
+		  $this->headScript()->appendFile($this->baseUrl() .'/scriptjs/jquery.scrollTo.js');
+		  $this->headScript()->appendFile($this->baseUrl() .'/scriptjs/bootstrap.min.js');
+		  $this->headScript()->appendFile($this->baseUrl() .'/scriptjs/bootmetro.js');
+		  $this->headScript()->appendFile($this->baseUrl() .'/scriptjs/bootmetro-charms.js');
+		  $this->headScript()->appendFile($this->baseUrl().'/scriptjs/demo.js');
+		  $this->headScript()->appendFile($this->baseUrl() .'/scriptjs/holder.js');
+		       
 
-		         
-		       
-		        
-		        
-		        $this->headScript()->appendFile( $this->baseUrl() .'/scriptjs/jquery-1.8.2.min.js');
-		        $this->headScript()->appendFile($this->baseUrl().'/scriptjs/google-code-prettify/prettify.js');
-				$this->headScript()->appendFile($this->baseUrl() .'/scriptjs/jquery.mousewheel.js');
-		    	$this->headScript()->appendFile($this->baseUrl() .'/scriptjs/jquery.scrollTo.js');
-				$this->headScript()->appendFile($this->baseUrl() .'/scriptjs/bootstrap.min.js');
-				$this->headScript()->appendFile($this->baseUrl() .'/scriptjs/bootmetro.js');
-				$this->headScript()->appendFile($this->baseUrl() .'/scriptjs/bootmetro-charms.js');
-				$this->headScript()->appendFile($this->baseUrl().'/scriptjs/demo.js');
-				$this->headScript()->appendFile($this->baseUrl() .'/scriptjs/holder.js');
-		       
-			   
+		  // recuperer le profil 
+		  $profil = substr_replace($this->LoggedProfil(),"",0,31);
+		  $profil = str_replace("Deconnexion","", $profil);
+		  $profil = str_replace(" ","",$profil);
+		  $profil  = strip_tags($profil); 
+			            
 		  
 		  ?>
 		  <?php 
@@ -104,21 +107,45 @@ echo $this->doctype() ?>
                        
                        <ul class="nav ">  	
                          </li>
-                         <li class="divider-vertical"></li>
-                       	 <li class="dropdown">
-                           <a href="#" class="dropdown-toggle" data-toggle="dropdown">Proposition<b class="caret"></b></a>
-                           <ul class="dropdown-menu">
-                             <li><a href="<?php echo $this->url(array('controller' => 'proposition', 'action' => 'creer'), 'default', true) ?>">Créer</a></li>
-                             <li><a href="<?php echo $this->url(array('controller' => 'proposition', 'action' => 'affichercsm'), 'default', true) ?>">Afficher / Modifier</a></li>
-                             <li><a href="<?php echo $this->url(array('controller' => 'proposition', 'action' => 'afficheradmin'), 'default', true) ?>">Valider / Refuser</a></li>
-                            
-                           </ul>
-                         </li>
-                         <li class="divider-vertical"></li>
+                        
+                       	<?php 
+			           /* if($profil == 'admin' || $profil == 'csm')
+			            { */
+			            ?>
+			             <li class="divider-vertical"></li>
+                       	 	<li class="dropdown">
+                          		 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Proposition<b class="caret"></b></a>
+                      
+			                  		 <ul class="dropdown-menu">
+				                       <li><a href="<?php echo $this->url(array('controller' => 'proposition', 'action' => 'creer'), 'default', true) ?>">Créer</a></li>
+				                       <li><a href="<?php echo $this->url(array('controller' => 'proposition', 'action' => 'affichercsm'), 'default', true) ?>">Afficher / Modifier</a></li>
+				                       <li><a href="<?php echo $this->url(array('controller' => 'proposition', 'action' => 'afficheradmin'), 'default', true) ?>">Valider / Refuser</a></li>                         
+			                   		</ul>
+			                 </li>
+			            <?php 
+			           //  }
+			             ?>
+			              <li class="divider-vertical"></li>
                           <li class="dropdown">
                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Congés<b class="caret"></b></a>
                            <ul class="dropdown-menu">
-                             <li><a href="<?php echo $this->url(array('controller' => 'conge', 'action' => 'creer'), 'default', true) ?>">Créer</a></li>
+                     <?php     
+           
+				               if($profil == 'admin')
+				              {
+                       ?>
+                             <li><a href="<?php echo $this->url(array('controller' => 'conge', 'action' => 'creer'), 'default', true) ?>">Créer</a></li> 
+                             <li><a href="<?php echo $this->url(array('controller' => 'conge', 'action' => 'afficher'), 'default', true) ?>">Afficher / Modifier</a></li>    
+                      <?php 
+				              }
+				              else 
+				              {
+				       ?>  
+                             <li><a href="<?php echo $this->url(array('controller' => 'conge', 'action' => 'afficher'), 'default', true) ?>">Afficher</a></li>
+                      <?php     
+				              }     
+                      ?>
+                           
                            </ul>
                          </li>
                          <li class="divider-vertical"></li>
@@ -161,11 +188,11 @@ echo $this->doctype() ?>
             <div class="top-info-block">
             
             
-               <h3><?php 
-               $profil = substr_replace($this->LoggedProfil(),"",0,31);
-               $profil = str_replace("Deconnexion","", $profil);
-               $profil  = strip_tags($profil);
-               echo $profil;?></h3>
+               <h3>
+               <?php 
+               echo $profil;
+               ?>
+               </h3>
                <h4><a href="<?php echo $this->url(array('controller' =>'connexion', 'action' => 'deconnexion'), 'default', true);?>">Déconnexion</a></h4>
             </div>
             <div class="top-info-block">
