--- a/application/views/scripts/proposition/affichercsm.phtml
+++ b/application/views/scripts/proposition/affichercsm.phtml
@@ -1,5 +1,29 @@
-
-
+<?php 
+$this->headScript()->appendFile( $this->baseUrl() .'/js/myScriptProp.js');
+echo $this->headScript();
+?>
+  
+   <?php 
+               $profil = substr_replace($this->LoggedProfil(),"",0,31);
+               $profil = str_replace("Deconnexion","", $profil);
+               $profil = str_replace(" ","",$profil);
+               $profil  = strip_tags($profil);
+    ?>
+    
+<!-- Modal Pour confirmation de suppression -->
+ <div id="myModal" class="modal message hide fade" aria-hidden="true" aria-labelledby="myModalLabel" role="dialog" tabindex="-1" style="display: none;">
+	<div class="modal-header">
+		<button type="button" class="close" data-dismiss="modal" aria-hidden="true"></button>
+		<h3 id="myModalLabel">Confirmer la suppression</h3>
+	</div>
+	<div class="modal-body">
+		<p></p>
+	</div>
+	<div class="modal-footer">
+		<button class="btn" data-dismiss="modal" aria-hidden="true" id="annulSupp">Annuler</button>
+		<button class="btn  btn-info" id="suppButton">Confirmer</button>
+	</div>
+</div>
 <div class="row-fluid offset1">
 		<div id="header-container">
             
@@ -8,14 +32,18 @@
                      Proposition
                      <b class="caret"></b>
                   </a>
-                  
-                 	 
+               <?php
+               if($profil == 'admin' || $profil == 'csm')
+               { 
+               ?>
                    <ul class="dropdown-menu">
                        <li><a href="<?php echo $this->url(array('controller' => 'proposition', 'action' => 'creer'), 'default', true) ?>">Créer</a></li>
                        <li><a href="<?php echo $this->url(array('controller' => 'proposition', 'action' => 'affichercsm'), 'default', true) ?>">Afficher / Modifier</a></li>
                        <li><a href="<?php echo $this->url(array('controller' => 'proposition', 'action' => 'afficheradmin'), 'default', true) ?>">Valider / Refuser</a></li>                         
                    </ul>
-              
+              <?php 
+               }
+               ?>
 			</div><!--MBA : fermeture dropdown -->
           
 		</div><!-- MBA : fermeture div="header-container" -->
@@ -64,8 +92,8 @@
             <th>Fin Journee</th>
             <th>Nombre Jours</th>
             <th>Etat</th>
-            <th>Edit</th>
-            <th>Delete</th>
+            <th>Modifier</th>
+            <th>Supprimer</th>
 
         </tr>
         </thead>
@@ -80,7 +108,7 @@
 			
 			
 		?>
-        <tr <?php $etat =$proposition->etat;	
+       <tbody> <tr id="<?php echo $proposition->id; ?>"<?php $etat =$proposition->etat;	
         					switch($etat){
 							case 'OK':{echo 'class="success"';break;}
 						    case 'KO':{echo 'class="error"';break;}
@@ -94,13 +122,13 @@
             <td><?php echo $proposition->etat; ?></td>
             <td>
 
-                 <a href="<?php echo $this->url(array('controller' => 'proposition', 'action' => 'modifier', 'id' => $proposition->id), 'default', true); ?>">Modifier</a>
+                 <a href="<?php echo $this->url(array('controller' => 'proposition', 'action' => 'modifier', 'id' => $proposition->id), 'default', true); ?>"><i  class="icon-pencil"></i></a>
             </td>
-           <td>
-               <a href="<?php echo $this->url(array('controller' => 'proposition', 'action' => 'supprimer', 'id' => $proposition->id), 'default', true); ?>">Supprimer</a>
+           <td >
+                 <i class="icon-remove" id="<?php echo $this->url(array('controller' => 'proposition', 'action' => 'supprimer'), 'default', true); ?>"></i>
             </td>
 
-        </tr>
+        </tr> </tbody>
         
         <?php endforeach; ?>
     </table>
