MTA : Gestion des chevauchements pour " conge et proposition "

--- a/application/views/scripts/test/index.phtml
+++ b/application/views/scripts/test/index.phtml
@@ -4,8 +4,8 @@
 
 //OK  
 ///////////Function jours_feries($annee, $alsacemoselle, $maroc)
-/*    
-    echo 'les jours fériés</br>';
+/*
+    echo 'les jours fériés France </br>';
 	for ($i = 0; $i <  count($this->var); $i++) 
 	{
 		echo $this->var[$i].'</br>' ;
