--- a/application/views/scripts/Outils/calcul-nombre-jours-conge.phtml
+++ b/application/views/scripts/Outils/calcul-nombre-jours-conge.phtml
@@ -1,10 +1,10 @@
 	 <?php
 	 #region MBA
 	 /*
-	  * MBA : Import de la bibliotheque JqueryUI et datePicker elles seront utilisÃ©es dans le formulaire
+	  * MBA : Import de la bibliotheque JqueryUI et datePicker elles seront utilisées dans le formulaire
 	  */
 		$this->JQuery()->addStyleSheet($this->baseUrl() . '/js/jquery/themes/smoothness/jquery-ui-1.8.23.custom.css');
-		// MBA : indique le fichier de script javascript Ã  utliser avec jQuery UI
+		// MBA : indique le fichier de script javascript à utliser avec jQuery UI
 		$this->JQuery()->setUiLocalPath($this->baseUrl() . '/js/jquery/ui/jquery-ui-1.8.23.custom.js');
 		$this->Jquery()->addJavascriptFile($this->baseUrl() . '/js/jquery/ui/i18n/jquery.ui.datepicker-fr.js');
 				   
@@ -29,7 +29,7 @@
 	<?php
 	/*
 	 * MBA : Appel au layout 'layouts/scripts/mylayout';
-	 * setAction : Le formulaire opÃ¨re sur la page courante
+	 * setAction : Le formulaire opère sur la page courante
 	 * 
 	 */
 	$this->layout()->setLayout('mylayout');
@@ -42,7 +42,7 @@
 					
 	<?php
 	/*
-	 * Si erreurs de traitements* renvoyÃ© depuis le controlleur 
+	 * Si erreurs de traitements* renvoyé depuis le controlleur 
 	 * traitemets : logique, ajout BD, Exception ...
 	 */
 
@@ -54,7 +54,7 @@
 			<div class="alert alert-error">
 				<button type="button" class="close " data-dismiss="alert"></button>
 				<strong>Erreur :</strong>  <?php //Message d'erreur
-                                         echo "Â Â Â ".$this->error; ?>
+                                         echo "   ".$this->error; ?>
 			</div>
 
 	<?php } ?>
@@ -72,7 +72,7 @@
 			<div class="alert">
 				<button type="button" class="close " data-dismiss="alert"></button>
 				<strong>Alerte :</strong>  <?php //Message warning
-                                         echo "Â Â Â ".$this->warning; ?>
+                                         echo "   ".$this->warning; ?>
 			</div>
 	
 	<?php } 
@@ -80,18 +80,18 @@
 	
 	
  	/*
-	 * Gestion des messages succÃ¨s 
+	 * Gestion des messages succès 
 	 */
 	
 	else if(isset($this->success))
 	{
 	?>
 	
-	<!-- afficage message succÃ©s  -->
+	<!-- afficage message succés  -->
             <div class="alert alert-success">
 				<button type="button" class="close " data-dismiss="alert"></button>
 				<strong>Succes :</strong> <?php //Message succes
-	                                      echo "Â Â Â ".$this->success ;?>
+	                                      echo "   ".$this->success ;?>
 			</div>
 	<?php }?>
 		<!-- ICI L'AFFICHAGE DU FORMULAIRE -->
@@ -99,7 +99,7 @@
 		<fieldset>
 			<legend ><?php if(isset($this->title))echo $this->title;?></legend>
 				
-				<!-- On rÃ©cupÃ©re les informations nÃ©cessaire du formulaire via le $this->form -->
+				<!-- On récupére les informations nécessaire du formulaire via le $this->form -->
 					<form action="<?php $this->form->getAction() ?>" name="<?php $this->form->getName() ?>" method="post">
 					
                       <?php
@@ -109,7 +109,7 @@
                       
                       
                       /*
-                       * On rÃ©cupÃ©re les Ã©lements du formulaire , et on compte le nombre de ceux ci
+                       * On récupére les élements du formulaire , et on compte le nombre de ceux ci
                        */
 	                      $Elements =$this->form->getElements();
 	                      $N_Elements = count($Elements);
@@ -117,21 +117,21 @@
 	                      if($N_Elements > 5)
 	                      {
 	                      	/*
-	                         * Si Le nombre d'Ã©lÃ©ment est supÃ©rieur Ã  5 l'affichage sera en deux colonnes 
+	                         * Si Le nombre d'élément est supérieur à 5 l'affichage sera en deux colonnes 
 	                         * pour optimiser la visualisation. 
 	                         */
                       ?>
                       
-                      	<!-- ouverture premiÃ¨re colonne (conteneur div )-->
+                      	<!-- ouverture première colonne (conteneur div )-->
                       	<div class="span4 offset2">
                       	
                       	
                       <?php 
                       	/*
                       	 * $i s'incremente tout au long du foreach
-                      	 * $break contient le nombre d'Ã©lÃ©ment par 2 pour les afficher 
-                      	 * en deux colonnes (ne prend jamais valeur rÃ©el si nombre est impaire
-                      	 * la premiÃ¨re colonne contiendra plus de champ (+1) que la deuxieme
+                      	 * $break contient le nombre d'élément par 2 pour les afficher 
+                      	 * en deux colonnes (ne prend jamais valeur réel si nombre est impaire
+                      	 * la première colonne contiendra plus de champ (+1) que la deuxieme
                       	 * 
                       	 * ...
                       	 * 
@@ -142,7 +142,7 @@
 	                      
 	                      	foreach( $Elements as $k=>$element)
 	                      	{
-	                      		/*si (Break n'est pas encore atteint ($i commenÃ§ant de 0))
+	                      		/*si (Break n'est pas encore atteint ($i commençant de 0))
 	                      		 *  =>ecrire dans la premiere colonne 
 	                      		 */ 
 	                      		
@@ -153,7 +153,7 @@
 	                      		}
 	                      		elseif ($i >= $break)
 	                      		{
-	                      		/*si (Break est atteint ($i s'incrementant par 1 sur chaque Ã©criture d'Ã©lÃ©ment))
+	                      		/*si (Break est atteint ($i s'incrementant par 1 sur chaque écriture d'élément))
 	                      		 *  =>fermer la premiere colonne
 	                      		 *  =>ouvrir deuxieme colonne
 	                      		 *  =>ecrire dans la deuxieme colonne 
@@ -180,7 +180,7 @@
                       	/* 	
                       	if($N_Elements > 15)
                       	{
-                      		 	echo'affichage customisÃ© Ã  tester(ajout d'une 3 eme colonne)
+                      		 	echo'affichage customisé à tester(ajout d'une 3 eme colonne)
                       		 	 pour l'instant affichage max sur 2 colonne;
                       	}
                      */
@@ -188,14 +188,14 @@
                       }
                       else { //$N_element <5
                       	?>
-                      	<!--offset4 on se dÃ©place de 4 case* pour centrer la colonne(div)
-                      	 case : .span voir systÃ¨me de grid (css)
+                      	<!--offset4 on se déplace de 4 case* pour centrer la colonne(div)
+                      	 case : .span voir système de grid (css)
                       	 -->
                       	
                       	<div class="span offset4">
                       	
                       
-                      	<?php  //Ecriture dans la premiÃ¨re colonne
+                      	<?php  //Ecriture dans la première colonne
 
                       	      foreach ( $Elements as $k=>$Element)
                                   echo $this->form->getElement($k); 
