--- a/application/views/scripts/proposition/afficheradmin.phtml
+++ b/application/views/scripts/proposition/afficheradmin.phtml
@@ -1,20 +1,12 @@
 
 
-<div class="row-fluid offset1">
+	<div class="row-fluid offset1">
 		<div id="header-container">
             
 			<div class="dropdown">
                   <a class="header-dropdown dropdown-toggle accent-color" data-toggle="dropdown" href="#" >
-                     Proposition
-                     <b class="caret"></b>
+                  Proposition
                   </a>
-                  
-                 	 
-                   <ul class="dropdown-menu">
-                       <li><a href="<?php echo $this->url(array('controller' => 'proposition', 'action' => 'creer'), 'default', true) ?>">Créer</a></li>
-                       <li><a href="<?php echo $this->url(array('controller' => 'proposition', 'action' => 'affichercsm'), 'default', true) ?>">Afficher / Modifier</a></li>
-                       <li><a href="<?php echo $this->url(array('controller' => 'proposition', 'action' => 'afficheradmin'), 'default', true) ?>">Valider / Refuser</a></li>                         
-                   </ul>
               
 			</div><!--MBA : fermeture dropdown -->
           
@@ -105,6 +97,5 @@
     echo $this->paginationControl($this->propositionArray, 'Sliding', 'common/my_paginator_control.phtml');
 	?>
 </div>
-    </br>    <!--  MTA / Mohamed khalil Takafi  -->
-   
+    <br>    <!--  MTA / Mohamed khalil Takafi  -->
 </div>
