--- a/application/layouts/scripts/mylayout.phtml
+++ b/application/layouts/scripts/mylayout.phtml
@@ -13,7 +13,7 @@ echo $this->doctype() ?>
    <!-- Mobile viewport optimized: h5bp.com/viewport -->
    <meta name="viewport" content="width=device-width">
 
-   <title>Application de gestion de Congés</title>
+   <title>Application de gestion de congés</title>
    <meta name="robots" content="index, nofollow">
    <meta name="description" content="Application de gestion de congé : Application qui gére les congés du csm et france du projet Presstalis." />
    <meta name="keywords" content="Application gestion congé,congé,calendrier,Presstalis" />
@@ -36,25 +36,30 @@ echo $this->doctype() ?>
 		   */
 		 
 		  $this->headLink()->appendStylesheet($this->baseUrl() . '/content/css/bootstrap.css');
+          
 		  $this->headLink()->appendStylesheet($this->baseUrl() . '/content/css/bootstrap-responsive.css');
+		   
 		  $this->headLink()->appendStylesheet($this->baseUrl() . '/content/css/bootmetro.css');
           $this->headLink()->appendStylesheet($this->baseUrl() . '/content/css/bootmetro-tiles.css');
-	      $this->headLink()->appendStylesheet($this->baseUrl() . '/content/css/bootmetro-charms.css');	
+	      $this->headLink()->appendStylesheet($this->baseUrl() . '/content/css/bootmetro-charms.css');
+	      $this->headLink()->appendStylesheet($this->baseUrl() . '/content/css/bootstrap-select.css');	
 	      $this->headLink()->appendStylesheet($this->baseUrl() . '/content/css/metro-ui-light.css');
 	      $this->headLink()->appendStylesheet($this->baseUrl() . '/content/css/icomoon.css'); 
-          echo $this->headLink();		       
-		        
+
+	      echo $this->headLink();		       
 		        
 		  $this->headScript()->appendFile( $this->baseUrl() .'/scriptjs/jquery-1.8.2.min.js');
+          $this->headScript()->appendFile($this->baseUrl() .'/scriptjs/bootstrap.min.js');
+          $this->headScript()->appendFile($this->baseUrl() .'/scriptjs/bootstrap-select.js');
 		  $this->headScript()->appendFile($this->baseUrl().'/scriptjs/google-code-prettify/prettify.js');
 	      $this->headScript()->appendFile($this->baseUrl() .'/scriptjs/jquery.mousewheel.js');
 		  $this->headScript()->appendFile($this->baseUrl() .'/scriptjs/jquery.scrollTo.js');
-		  $this->headScript()->appendFile($this->baseUrl() .'/scriptjs/bootstrap.min.js');
+		 
 		  $this->headScript()->appendFile($this->baseUrl() .'/scriptjs/bootmetro.js');
-		  $this->headScript()->appendFile($this->baseUrl() .'/scriptjs/bootmetro-charms.js');
-		  $this->headScript()->appendFile($this->baseUrl().'/scriptjs/demo.js');
+		  
 		  $this->headScript()->appendFile($this->baseUrl() .'/scriptjs/holder.js');
-		       
+		  
+		  
 
 		  // recuperer le profil 
 		  $profil = substr_replace($this->LoggedProfil(),"",0,31);
@@ -67,7 +72,7 @@ echo $this->doctype() ?>
 		  <?php 
 			   
 		  echo $this->headTitle();
-			  	
+		 
 		  ?>
 		  <!-- All JavaScript at the bottom, except for Modernizr and Respond.
           Modernizr enables HTML5 elements & feature detects; Respond is a polyfill for min/max-width CSS3 Media Queries
@@ -208,33 +213,7 @@ echo $this->doctype() ?>
    </header>
 <body>
 	
-	   <div id="charms" class="win-ui-light">
-   
-      <div id="theme-charms-section" class="charms-section">
-         <div class="charms-header">
-            <a href="#" class="close-charms win-command">
-               <span class="win-commandimage win-commandring">&#xe05d;</span>
-            </a>
-            <h2>Settings</h2>
-         </div>
-   
-         <div class="row-fluid">
-            <div class="span12">
-   
-               <form class="">
-                  <label for="win-theme-select">Change theme:</label>
-                  <select id="win-theme-select" class="">
-                     <option value="metro-ui-semilight">Semi-Light</option>
-                     <option value="metro-ui-light">Light</option>
-                     <option value="metro-ui-dark">Dark</option>
-                  </select>
-               </form>
-   
-            </div>
-         </div>
-      </div>
-   
-   </div>
+	  
 <?php 
 
 ?>
@@ -250,7 +229,7 @@ echo $this->doctype() ?>
 		</div>	
 </body>
 
-
+</html>
            
            
 
