MBA : gestion role ,correction redirection ,affichage list ferie csm...

--- a/application/views/scripts/error/deny.phtml
+++ b/application/views/scripts/error/deny.phtml
@@ -1,3 +1,4 @@
-<div>
-<h1><?php echo $this->message; ?></h1>
-</div>
+
+<div class="hero-unit" ><h2><?php echo $this->message; ?></h2><em>Votre profil n'a pas les privilèges pour traiter votre requête.</em></div>
+
+
